extras/tls-ip-selfsigned/frontend-ingress.yaml
######################################################################
# Configure the Ingress to use the FrontendConfig that takes care of
# redirecting HTTP requests to HTTPS
######################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: boa-single-cluster-ip
    # reference the FrontendConfig for HTTP -> HTTPS redirect
    networking.gke.io/v1beta1.FrontendConfig: "boa-frontend-config"
spec:
  tls:
  - secretName: frontend-tls
  backend:
    serviceName: frontend
    servicePort: 80
